nuntium (1.4+ubports1) xenial; urgency=medium

  * Imported to UBports

 -- Florian Leeber <florian@ubports.com>  Fri, 4 Apr 2020 14:34:03 +0200
 
 nuntium (1.4+15.10.20150902-0ubuntu1) wily; urgency=medium

  [ Alfonso Sanchez-Beato ]
  * [ Dimitri John Ledkov ] Migrate from :sys:started events to dbus
    owner signals.

 -- CI Train Bot <ci-train-bot@canonical.com>  Wed, 02 Sep 2015 12:09:41 +0000

nuntium (1.4+15.10.20150714-0ubuntu1) wily; urgency=medium

  [ Dennis O'Flaherty ]
  * Enable receiving non-SMIL messages

  [ Alfonso Sanchez-Beato (email Canonical) ]
  * Fix decoding of From field value (LP: #1360403)

 -- CI Train Bot <ci-train-bot@canonical.com>  Tue, 14 Jul 2015 09:19:52 +0000

nuntium (1.4+15.10.20150707.1-0ubuntu1) wily; urgency=medium

  [ Alfonso Sanchez-Beato (email Canonical) ]
  * Track properly org.ofono.PushNotificationAgent (LP: #1471740) 

 -- CI Train Bot <ci-train-bot@canonical.com>  Tue, 07 Jul 2015 10:42:24 +0000

nuntium (1.4+15.10.20150701.2-0ubuntu1) wily; urgency=medium

  [ Alfonso Sanchez-Beato (email Canonical) ]
  * Use proxy and proxy port from ofono Settings property (LP: #1417976) 

 -- CI Train Bot <ci-train-bot@canonical.com>  Wed, 01 Jul 2015 16:36:42 +0000

nuntium (1.4+15.10.20150615-0ubuntu1) wily; urgency=medium

  [ Alfonso Sanchez-Beato (email Canonical) ]
  * Fix LP: #1461107 and make PDU decoding more robust
  * Fix LP: #1460012 (context opened twice on rx)
  * Wait between retries when opening an IP context
  * Set ofono's Preferred property when a context is known to work

 -- CI Train Bot <ci-train-bot@canonical.com>  Mon, 15 Jun 2015 08:52:13 +0000

nuntium (1.4+15.10.20150604-0ubuntu1) wily; urgency=medium

  [ Alfonso Sanchez-Beato (email Canonical) ]
  * Fix LP #1459995 and most bugs which symptom is not receiving MMS
    messages
  * Remove nuntium binary from VC

 -- CI Train Bot <ci-train-bot@canonical.com>  Thu, 04 Jun 2015 12:49:28 +0000
