@@ -232,9 +232,8 @@ type MNotificationInd struct {
 	ReplyChargingId                      string
 	TransactionId, ContentLocation       string
 	From, Subject                        string
-	//TODO:version - change back to unit64 to increase only minor version instead of major (Received could be also uint64)?
-	Expiry time.Time
-	Size   uint64
+	Expiry                               time.Time
+	Size                                 uint64
 }
 
 // MNotifyRespInd holds a m-notifyresp.ind message defined in
@@ -304,7 +303,6 @@ func NewMSendConf() *MSendConf {
 	}
 }
 
-//TODO:version - change back to NewMNotificationInd() to increase only minor version instead of major (add Received after every NewMNotificationInd)?
 func NewMNotificationInd(received time.Time) *MNotificationInd {
 	return &MNotificationInd{Type: TYPE_NOTIFICATION_IND, UUID: GenUUID(), Received: received}
 }
