@@ -77,7 +77,6 @@ type OutgoingMessage struct {
 	Reply       *dbus.Message
 }
 
-//TODO:version - Change so we don't need to bump major version.
 func NewMMSService(conn *dbus.Connection, modemObjPath dbus.ObjectPath, identity string, outgoingChannel chan *OutgoingMessage, useDeliveryReports bool, mNotificationIndChan chan<- *mms.MNotificationInd) *MMSService {
 	properties := make(map[string]dbus.Variant)
 	properties[identityProperty] = dbus.Variant{identity}
@@ -342,7 +341,6 @@ func (service *MMSService) SingnalMessageRemoved(objectPath dbus.ObjectPath) err
 	return nil
 }
 
-//TODO:version - Change so we don't need to bump major version.
 func (service *MMSService) IncomingMessageFailAdded(mNotificationInd *mms.MNotificationInd, downloadError error) error {
 	if service == nil {
 		return fmt.Errorf("Nil MMSService")
@@ -356,14 +354,6 @@ func (service *MMSService) IncomingMessageFailAdded(mNotificationInd *mms.MNotif
 
 	params := make(map[string]dbus.Variant)
 
-	//TODO:jezek - delete or write somewhere
-	// Signal path:
-	// https://github.com/ubports/telepathy-ofono/blob/040321101e7bfe5950934a1b718875f3fe29c495/mmsdservice.cpp#L118
-	// https://github.com/ubports/telepathy-ofono/blob/040321101e7bfe5950934a1b718875f3fe29c495/connection.cpp#L518
-	// https://github.com/ubports/telepathy-ofono/blob/040321101e7bfe5950934a1b718875f3fe29c495/connection.cpp#L423
-	// https://github.com/ubports/telepathy-ofono/blob/db5e35b68f244d007468b8de2d9ad9998a2c8bd7/ofonotextchannel.cpp#L473
-	// https://github.com/TelepathyIM/telepathy-qt/blob/7cf3e35fdf6cf7ea7d8fc301eae04fe43930b17f/TelepathyQt/base-channel.cpp#L460
-	// https://github.com/ubports/history-service/blob/8285a4a3174b84a04f00d600fff99905aec6c4e2/daemon/historydaemon.cpp#L1023
 	params["Status"] = dbus.Variant{"received"}
 	params["Date"] = dbus.Variant{time.Now().Format(time.RFC3339)}
 	params["Sender"] = dbus.Variant{strings.TrimSuffix(mNotificationInd.From, PLMN)}
@@ -424,11 +414,9 @@ func (service *MMSService) IncomingMessageFailAdded(mNotificationInd *mms.MNotif
 		redownloadChan = nil
 	}
 	service.messageHandlers[payload.Path] = NewMessageInterface(service.conn, payload.Path, service.msgDeleteChan, redownloadChan)
-	//TODO:issue - if error encountered, you can stop handling message.
 	return service.MessageAdded(&payload)
 }
 
-//TODO:version - Change so we don't need to bump major version.
 //IncomingMessageAdded emits a MessageAdded with the path to the added message which
 //is taken as a parameter and creates an object path on the message interface.
 func (service *MMSService) IncomingMessageAdded(mRetConf *mms.MRetrieveConf, mNotificationInd *mms.MNotificationInd) error {
@@ -455,7 +443,6 @@ func (service *MMSService) IncomingMessageAdded(mRetConf *mms.MRetrieveConf, mNo
 	}
 
 	service.messageHandlers[payload.Path] = NewMessageInterface(service.conn, payload.Path, service.msgDeleteChan, nil)
-	//TODO:issue - if error encountered, you can stop handling message.
 	return service.MessageAdded(&payload)
 }
 
